# cumin

./: CMakeLists.txt  Makefile  README.md  conanfile.txt  draw.cpp  main.cpp  objects.cpp  render.cpp  utils.cpp
include/: app.h  colors.h  defs.h  draw.h  objects.h  render.h  utils.h
